--- a/index.html
+++ b/index.html
@@ -231,8 +231,8 @@
                 </div>
                 <div class="task-content">
                     <span class="task-time">09:00 AM</span>
-                    <span class="task-desc">The ACV Flush</span>
-                    <span class="task-detail">1 tbsp Apple Cider Vinegar + 250ml water. Drink immediately.</span>
+                    <span class="task-desc">The Big ACV Flush</span>
+                    <span class="task-detail">1 tbsp Apple Cider Vinegar + <strong>500ml water</strong>. Drink immediately.</span>
                 </div>
             </label>
             
